--- a/assets/js/blocks/attribute-filter/style.scss
+++ b/assets/js/blocks/attribute-filter/style.scss
@@ -32,32 +32,40 @@
 		}
 	}
 
-	.components-form-token-field {
+	.wc-blocks-components-form-token-field-wrapper {
 		flex-grow: 1;
 		max-width: unset;
 		width: 0;
-		border-radius: inherit;
-		border-color: inherit;
+		border-color: $gray-600;
 
 		.components-visually-hidden,
 		.components-form-token-field__label {
 			@include visually-hidden();
 		}
 
+		.components-form-token-field,
+		.components-form-token-field__input-container {
+			border-color: inherit;
+			box-sizing: border-box;
+		}
+
+		.components-form-token-field__input-container input[type="text"].components-form-token-field__input {
+			min-height: 32px;
+		}
+
 		.components-form-token-field__remove-token {
 			border: none;
+		}
+
+		.components-form-token-field__suggestion {
+			padding: 8px;
 		}
 	}
 
 
 	.is-single .wc-block-attribute-filter-list-count,
-	.wc-block-dropdown-selector .wc-block-dropdown-selector__list .wc-block-attribute-filter-list-count {
+	.wc-blocks-components-form-token-field-wrapper .wc-block-attribute-filter-list-count {
 		opacity: 0.6;
 	}
 
-	.wc-block-components-dropdown-selector__input-wrapper {
-		height: 100%;
-		border-radius: inherit;
-		border-color: inherit;
-	}
 }
