wip: fix style with filter button

--- a/assets/js/blocks/attribute-filter/style.scss
+++ b/assets/js/blocks/attribute-filter/style.scss
@@ -47,6 +47,7 @@
 		.components-form-token-field__input-container {
 			border-color: inherit;
 			box-sizing: border-box;
+			margin-bottom: 0;
 		}
 
 		.components-form-token-field__input-container input[type="text"].components-form-token-field__input {
