--- a/assets/js/base/components/form-token-field/style.scss
+++ b/assets/js/base/components/form-token-field/style.scss
@@ -64,8 +64,14 @@
 			width: 100%;
 		}
 
+		.components-form-token-field__remove-token.components-button,
+		.components-form-token-field__token-text {
+			background: transparent;
+		}
+
 		.components-form-token-field__token-text {
 			width: 100%;
+			padding-left: 4px;
 		}
 
 		.components-form-token-field__token + input[type="text"].components-form-token-field__input {
