--- a/assets/js/base/components/form-token-field/style.scss
+++ b/assets/js/base/components/form-token-field/style.scss
@@ -75,8 +75,9 @@
 		}
 
 		.components-form-token-field__token + input[type="text"].components-form-token-field__input {
-			opacity: 0;
-			position: absolute;
+			border: 1px solid $gray-600;
+			padding: 0 5px;
+			margin: 0 2px 4px;
 		}
 	}
 }
