--- a/assets/js/blocks/mini-cart/style.scss
+++ b/assets/js/blocks/mini-cart/style.scss
@@ -142,21 +142,30 @@ h2.wc-block-mini-cart__title {
 		display: flex;
 		gap: $gap;
 
-		.wc-block-mini-cart__footer-cart.wc-block-components-button {
+		.wc-block-components-button {
+			flex-grow: 1;
+			font-weight: 600;
+		}
+
+		.wc-block-components-button.outlined {
 			box-shadow: inset 0 0 0 1px currentColor;
 			color: currentColor;
 			display: none;
-			flex-grow: 1;
-			font-weight: 600;
+
+			&:hover,
+			&:focus {
+				color: $white;
+			}
+
+			&:focus {
+				box-shadow: 0 0 0 2px $studio-blue;
+				box-shadow: inset 0 0 0 1px $white, 0 0 0 2px $studio-blue;
+				outline: 3px solid transparent;
+			}
 
 			@media only screen and (min-width: 480px) {
 				display: inline-flex;
 			}
-		}
-
-		.wc-block-mini-cart__footer-checkout {
-			flex-grow: 1;
-			font-weight: 600;
 		}
 	}
 
