--- a/assets/js/blocks/mini-cart/style.scss
+++ b/assets/js/blocks/mini-cart/style.scss
@@ -148,19 +148,16 @@ h2.wc-block-mini-cart__title {
 		}
 
 		.wc-block-components-button.outlined {
-			box-shadow: inset 0 0 0 1px currentColor;
 			color: currentColor;
 			display: none;
+
+			&:not(:focus) {
+				box-shadow: inset 0 0 0 1px currentColor;
+			}
 
 			&:hover,
 			&:focus {
 				color: $white;
-			}
-
-			&:focus {
-				box-shadow: 0 0 0 2px $studio-blue;
-				box-shadow: inset 0 0 0 1px $white, 0 0 0 2px $studio-blue;
-				outline: 3px solid transparent;
 			}
 
 			@media only screen and (min-width: 480px) {
