Add default page notice

--- a/assets/js/blocks/cart-checkout-shared/default-notice/editor.scss
+++ b/assets/js/blocks/cart-checkout-shared/default-notice/editor.scss
@@ -1,4 +1,4 @@
-.wc-block-cart__page-notice {
+.wc-default-page-notice.is-dismissible {
 	margin: 0;
 	padding-right: 16px;
 	.components-notice__dismiss {
