--- a/assets/js/blocks/price-filter/editor.scss
+++ b/assets/js/blocks/price-filter/editor.scss
@@ -15,6 +15,14 @@
 	}
 }
 
+.wc-block-price-filter__price-range-toggle {
+	width: 100%;
+
+	> div {
+		flex-grow: 1;
+	}
+}
+
 .wc-block-price-slider {
 	.components-placeholder__instructions {
 		border-bottom: 1px solid #e0e2e6;
