price text styling update

--- a/assets/js/base/components/price-slider/style.scss
+++ b/assets/js/base/components/price-slider/style.scss
@@ -94,6 +94,7 @@
 }
 
 .wc-block-components-price-slider__controls {
+	align-items: center;
 	display: flex;
 	gap: $gap-smaller;
 	margin-top: $gap-large;
