--- a/assets/js/base/components/price-slider/style.scss
+++ b/assets/js/base/components/price-slider/style.scss
@@ -55,6 +55,7 @@
 	&.is-loading.is-disabled {
 		.wc-block-components-price-slider__range-input-wrapper,
 		.wc-block-components-price-slider__amount,
+		.wc-block-components-price-slider__button-reset,
 		.wc-block-components-price-slider__button {
 			@include placeholder();
 			box-shadow: none;
@@ -97,6 +98,7 @@
 	align-items: center;
 	display: flex;
 	gap: $gap-smaller;
+	justify-content: space-between;
 	margin-top: $gap-large;
 
 	.wc-block-components-price-slider__amount {
@@ -107,10 +109,6 @@
 		max-width: 100px;
 		min-width: 0;
 		padding: $gap-smaller;
-
-		&.wc-block-components-price-slider__amount--max {
-			margin-left: auto;
-		}
 	}
 }
 .wc-block-components-price-slider__range-input {
