--- a/assets/js/base/components/price-slider/style.scss
+++ b/assets/js/base/components/price-slider/style.scss
@@ -54,11 +54,14 @@
 
 	&.is-loading.is-disabled {
 		.wc-block-components-price-slider__range-input-wrapper,
-		.wc-block-components-price-slider__amount,
 		.wc-block-components-price-slider__button-reset,
 		.wc-block-components-price-slider__button {
 			@include placeholder();
 			box-shadow: none;
+		}
+
+		.wc-block-components-price-slider__amount {
+			display: none;
 		}
 	}
 
