avoid breaking filter submit button style for other filter blocks

--- a/assets/js/base/components/price-slider/style.scss
+++ b/assets/js/base/components/price-slider/style.scss
@@ -125,8 +125,12 @@
 .wc-block-components-price-slider__actions {
 	align-items: center;
 	display: flex;
-	gap: $gap-smaller;
+	gap: $gap;
 	justify-content: flex-end;
+
+	.wc-block-components-filter-submit-button {
+		margin-left: 0;
+	}
 }
 
 .wc-block-components-price-slider__range-input {
