--- a/assets/js/editor-components/default-notice/editor.scss
+++ b/assets/js/editor-components/default-notice/editor.scss
@@ -4,6 +4,9 @@
 	.components-notice__dismiss {
 		min-width: 24px;
 	}
+	.components-notice__content {
+		margin: 4px 0;
+	}
 	svg {
 		width: 16px;
 		height: 16px;
