--- a/assets/js/base/components/price-slider/style.scss
+++ b/assets/js/base/components/price-slider/style.scss
@@ -102,7 +102,7 @@
 	display: flex;
 	gap: $gap-smaller;
 	justify-content: space-between;
-	margin-top: $gap-large;
+	margin: $gap-large 0;
 
 	.wc-block-components-price-slider__amount {
 		margin: 0;
@@ -119,7 +119,7 @@
 	align-items: center;
 	display: flex;
 	justify-content: space-between;
-	margin: $gap 0;
+	margin: $gap-large 0;
 }
 
 .wc-block-components-price-slider__actions {
