--- a/assets/js/blocks/active-filters/style.scss
+++ b/assets/js/blocks/active-filters/style.scss
@@ -14,9 +14,9 @@
 	overflow: hidden;
 
 	.wc-block-active-filters__clear-all {
-		@include font-size(regular);
-		float: right;
+		@include font-size(smaller);
 		border: none;
+		margin-top: 15px;
 		padding: 0;
 		text-decoration: underline;
 		cursor: pointer;
@@ -58,6 +58,7 @@
 
 	.wc-block-active-filters__list-item-type {
 		@include font-size(smaller);
+		font-weight: bold;
 		text-transform: uppercase;
 		letter-spacing: 0.1em;
 		margin: $gap 0 0;
@@ -70,10 +71,11 @@
 	}
 
 	.wc-block-active-filters__list-item-name {
-		font-weight: bold;
-		display: block;
+		@include font-size(smaller);
+		display: flex;
+		align-items: center;
 		position: relative;
-		padding: 0 16px 0 0;
+		padding: 0;
 	}
 
 	.wc-block-active-filters__list-item-remove {
@@ -83,10 +85,7 @@
 		height: 16px;
 		width: 16px;
 		padding: 0;
-		position: absolute;
-		right: 0;
-		top: 50%;
-		margin: -8px 0 0 0;
+		margin: 0 16px 0 0;
 		color: currentColor;
 	}
 
