--- a/assets/js/blocks/active-filters/style.scss
+++ b/assets/js/blocks/active-filters/style.scss
@@ -37,10 +37,9 @@
 		clear: both;
 
 		li {
-			margin: 0;
+			margin: 9px 0 0;
 			padding: 0;
 			list-style: none outside;
-			clear: both;
 
 			ul {
 				margin: 0;
@@ -53,6 +52,9 @@
 					margin: 0;
 				}
 			}
+		}
+		> li:first-child {
+			margin: 0;
 		}
 	}
 
@@ -87,6 +89,10 @@
 		padding: 0;
 		margin: 0 16px 0 0;
 		color: currentColor;
+
+		&:hover {
+			color: #7956ad;
+		}
 	}
 
 	.wc-block-active-filters__list--chips {
