Specify checkbox type so styles are not overridden in the editor

--- a/assets/js/base/components/filter-element-checkbox/style.scss
+++ b/assets/js/base/components/filter-element-checkbox/style.scss
@@ -9,7 +9,7 @@
 	margin-right: 16px;
 	vertical-align: middle;
 
-	input {
+	input[type="checkbox"] {
 		position: absolute;
 		cursor: pointer;
 		height: 100%;
