fix lint errors

--- a/assets/js/atomic/blocks/product-elements/button/style.scss
+++ b/assets/js/atomic/blocks/product-elements/button/style.scss
@@ -37,6 +37,6 @@
 	}
 }
 
-.wp-block-button.wc-block-components-product-button[data-is-descendent-of-query-loop='true'] {
+.wp-block-button.wc-block-components-product-button[data-is-descendent-of-query-loop="true"] {
 	text-align: center;
 }
