Improve the editor selector for stock apply button
Co-authored-by: Albert Juhé Lluveras <contact@albertjuhe.com>

--- a/assets/js/blocks/stock-filter/style.scss
+++ b/assets/js/blocks/stock-filter/style.scss
@@ -36,7 +36,7 @@
 	}
 }
 
-.editor-styles-wrapper .wc-block-stock-filter .wp-block-button__link,
+.editor-styles-wrapper .wc-block-stock-filter .wc-block-stock-filter__button,
 .wc-block-stock-filter .wc-block-stock-filter__button {
 	margin-top: em($gap-smaller);
 	padding: em($gap-smaller) em($gap);
