--- a/assets/js/blocks/cart/inner-blocks/cart-cross-sells-products/style.scss
+++ b/assets/js/blocks/cart/inner-blocks/cart-cross-sells-products/style.scss
@@ -35,12 +35,17 @@
 				}
 			}
 
+			.wc-block-components-product-button__button {
+				margin-top: 1em;
+			}
+
 			.wc-block-components-product-add-to-cart {
 				justify-content: center;
 
 				.wc-block-components-product-add-to-cart-button:not(.is-link) {
 					background-color: #eee;
 					color: #333;
+					font-weight: 600;
 					margin-top: 1em;
 
 					&:focus,
