Remove inline style defaults for color options.
This replaces the inline style with an added editor-specific styling
with slightly more specificity - but not too much to where it overrides
the Site Editor.

--- a/assets/js/blocks/featured-items/featured-category/editor.scss
+++ b/assets/js/blocks/featured-items/featured-category/editor.scss
@@ -4,3 +4,7 @@
 	@extend %with-media-controls;
 	@extend %with-resizable-box;
 }
+
+.editor-styles-wrapper .wp-block-woocommerce-featured-category {
+	@extend %wp-block-featured-item;
+}
