--- a/assets/js/blocks/featured-items/featured-product/editor.scss
+++ b/assets/js/blocks/featured-items/featured-product/editor.scss
@@ -8,3 +8,7 @@
 		margin-bottom: 16px;
 	}
 }
+
+.editor-styles-wrapper .wp-block-woocommerce-featured-product {
+	@extend %wp-block-featured-item;
+}
