Use flexbox for active filters loading placeholders

--- a/assets/js/blocks/active-filters/style.scss
+++ b/assets/js/blocks/active-filters/style.scss
@@ -7,6 +7,17 @@
 	h6 {
 		text-transform: inherit;
 	}
+
+	.wc-block-filter-title-placeholder {
+		.wc-block-active-filters__title {
+			height: 1em;
+		}
+	}
+
+	.wc-block-active-filters__title {
+		margin-top: $gap-small;
+		margin-bottom: $gap-small;
+	}
 }
 
 .wc-block-active-filters {
@@ -36,6 +47,20 @@
 		list-style: none outside;
 		clear: both;
 
+		&.wc-block-active-filters--loading {
+			margin-top: $gap-small;
+			display: flex;
+			flex-direction: column;
+			flex-wrap: nowrap;
+
+			&.wc-block-active-filters__list--chips {
+				flex-direction: row;
+				flex-wrap: wrap;
+				align-items: flex-end;
+				gap: 0 10px;
+			}
+		}
+
 		li {
 			margin: 9px 0 0;
 			padding: 0;
@@ -57,38 +82,39 @@
 			margin: 0;
 		}
 		li.show-loading-state-list {
-			@include placeholder();
-			box-shadow: none;
-			border-radius: 0;
-			margin-bottom: $gap;
-			margin-top: $gap;
-			height: 1em;
-			width: 100%;
+			display: inline-block;
+
+			> span {
+				@include placeholder();
+				display: inline-block;
+				box-shadow: none;
+				border-radius: 0;
+				height: 1em;
+				width: 100%;
+			}
 		}
 
 		li.show-loading-state-chips {
-			@include placeholder();
-			display: inline-block !important;
-			box-shadow: none;
-			border-radius: 13px;
-			margin-bottom: $gap;
-			margin-top: $gap;
-			height: 1em;
-			width: 100%;
-			min-width: 70px;
-			margin-right: 15px !important;
+			display: inline-block;
 
-			&:last-of-type {
+			> span {
+				@include placeholder();
+				display: inline-block;
+				box-shadow: none;
+				border-radius: 13px;
+				height: 1em;
+				width: 100%;
+				min-width: 70px;
+				margin-right: 15px !important;
+			}
+
+			&:last-of-type > span {
 				margin-right: 0 !important;
 			}
 
-			&:nth-child(1),
-			&:nth-child(2) {
-				width: calc(20% - 15px);
-			}
-
 			&:nth-child(3) {
-				width: calc(60% - 15px);
+				flex-grow: 1;
+				max-width: 200px;
 			}
 		}
 	}
