Adjust empty cart icon within Twenty-Twentytwo

--- a/assets/css/editor.scss
+++ b/assets/css/editor.scss
@@ -85,3 +85,10 @@ svg.wc-block-editor-components-block-icon--sparkles path {
 		}
 	}
 }
+
+.theme-twentytwentytwo {
+	.wp-block-image.aligncenter {
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
