--- a/assets/js/base/context/providers/store-notices/components/style.scss
+++ b/assets/js/base/context/providers/store-notices/components/style.scss
@@ -17,6 +17,9 @@
 				vertical-align: text-top;
 			}
 		}
+		.components-notice__content > div:not(.components-notice__actions) *:last-child {
+			margin-bottom: 0;
+		}
 	}
 	.wc-block-components-notices__notice + .wc-block-components-notices__notice {
 		margin-top: 1em;
