--- a/assets/js/base/context/providers/store-notices/components/style.scss
+++ b/assets/js/base/context/providers/store-notices/components/style.scss
@@ -17,8 +17,13 @@
 				vertical-align: text-top;
 			}
 		}
-		.components-notice__content > div:not(.components-notice__actions) *:last-child {
-			margin-bottom: 0;
+		.components-notice__content > div:not(.components-notice__actions) {
+			*:first-child {
+				margin-top: 0;
+			}
+			*:last-child {
+				margin-bottom: 0;
+			}
 		}
 	}
 	.wc-block-components-notices__notice + .wc-block-components-notices__notice {
