--- a/assets/js/base/components/filter-reset-button/style.scss
+++ b/assets/js/base/components/filter-reset-button/style.scss
@@ -1,5 +1,5 @@
 .wc-block-components-filter-reset-button {
-	@include link-button();
+	@include filter-link-button();
 	cursor: pointer;
 
 	&[disabled] {
