--- a/assets/js/blocks/mini-cart/style.scss
+++ b/assets/js/blocks/mini-cart/style.scss
@@ -190,3 +190,7 @@ h2.wc-block-mini-cart__title {
 		}
 	}
 }
+
+.theme-twentytwentythree .wp-block-woocommerce-mini-cart-contents {
+	background-color: var(--wp--preset--color--base);
+}
