Prevent padding from placeholder instructions to be overriden
Inside the AttributeFilter component we are using a component Placeholder from the @wordpress/components library. This component has its own styles applied to itself including the part related to the instructions that are displayed.

Currently there is no way to override the styles specifically for the instructions part so the only possible way is to force the style to be applied over the inner styles set by the Placeholder component.

--- a/assets/js/blocks/attribute-filter/editor.scss
+++ b/assets/js/blocks/attribute-filter/editor.scss
@@ -9,7 +9,7 @@
 	.components-placeholder__instructions {
 		border-bottom: 1px solid #e0e2e6;
 		width: 100%;
-		padding-bottom: 1em;
+		padding-bottom: 1em !important;
 		margin-bottom: 2em;
 	}
 	.components-placeholder__label svg {
