--- a/assets/js/blocks/attribute-filter/editor.scss
+++ b/assets/js/blocks/attribute-filter/editor.scss
@@ -9,7 +9,7 @@
 	.components-placeholder__instructions {
 		border-bottom: 1px solid #e0e2e6;
 		width: 100%;
-		padding-bottom: 1em !important;
+		padding-bottom: 1em;
 		margin-bottom: 2em;
 	}
 	.components-placeholder__label svg {
