--- a/assets/css/abstracts/_mixins.scss
+++ b/assets/css/abstracts/_mixins.scss
@@ -32,8 +32,8 @@ $fontSizes: (
 @mixin placeholder($include-border-radius: true) {
 	outline: 0 !important;
 	border: 0 !important;
-	background-color: #ebebeb !important;
-	color: transparent !important;
+	background-color: currentColor !important;
+	color: currentColor !important;
 	width: 100%;
 	@if $include-border-radius == true {
 		border-radius: 0.25rem;
@@ -61,7 +61,7 @@ $fontSizes: (
 		top: 0;
 		height: 100%;
 		background-repeat: no-repeat;
-		background-image: linear-gradient(90deg, #ebebeb, #f5f5f5, #ebebeb);
+		background-image: linear-gradient(90deg, currentColor, #f5f5f54d, currentColor);
 		transform: translateX(-100%);
 		animation: loading__animation 1.5s ease-in-out infinite;
 	}
