Refactor Store Notices
Move snackbar hiding filter before notice creation

Implements showApplyCouponNotice

Refactor context providers

Use STORE_NOTICE_CONTEXTS

use refs to track notice containers

Refactor ref usage

Use existing noticeContexts

--- a/assets/js/base/context/providers/store-notices/snackbar-notices-container/style.scss
+++ b/assets/js/base/context/providers/store-notices/snackbar-notices-container/style.scss
@@ -17,4 +17,12 @@
 			margin-right: 10px;
 		}
 	}
+
+	.components-snackbar--status-error {
+		background-color: #e2401c;
+	}
+
+	.components-snackbar--status-info {
+		background-color: #0073aa;
+	}
 }
