--- a/packages/checkout/components/store-notices-container/style.scss
+++ b/packages/checkout/components/store-notices-container/style.scss
@@ -1,6 +1,12 @@
 .wc-block-components-notices {
 	display: block;
-	margin-bottom: 2em;
+	margin: 1.5em 0;
+	&:first-child {
+		margin-top: 0;
+	}
+	&:empty {
+		margin: 0;
+	}
 	.wc-block-components-notices__notice {
 		margin: 0;
 		display: flex;
