Update hex color val to currentColor.

--- a/assets/css/editor.scss
+++ b/assets/css/editor.scss
@@ -33,7 +33,7 @@
 	}
 }
 
-svg.wc-block-editor-components-block-icon {
+:not(.site-editor-php) svg.wc-block-editor-components-block-icon {
 	color: $studio-woocommerce-purple-50;
 }
 
