--- a/assets/js/blocks/order-received/order-summary/style.scss
+++ b/assets/js/blocks/order-received/order-summary/style.scss
@@ -4,6 +4,7 @@
 	.wc-block-components-order-summary-title {
 		position: relative;
 		padding-left: 3.75em;
+		margin: 0 0 2em;
 
 		[role="doc-subtitle"] {
 			font-size: 1em;
@@ -24,7 +25,7 @@
 			height: 4em;
 			width: 4em;
 			font-size: 1em;
-			margin: -0.37em 0 0 -0.5em;
+			margin: -0.25em 0 0 -0.5em;
 			position: absolute;
 		}
 	}
