add addresses to order received summary

--- a/assets/js/blocks/order-received/order-summary/style.scss
+++ b/assets/js/blocks/order-received/order-summary/style.scss
@@ -46,3 +46,12 @@
 		}
 	}
 }
+
+.wc-block-components-order-addresses-box {
+	display: flex;
+	gap: 1.5em;
+
+	.wc-block-components-order-addresses-box__address {
+		flex: 1;
+	}
+}
