Remove fill attributes on SVG
Having the fill attributes explicitly defined on the SVG was setting the
icon to purple in unexpected cases.

This also reverts the quick attempt to adjust CSS selector for a fix, as
it was the incorrect approach.

--- a/assets/css/editor.scss
+++ b/assets/css/editor.scss
@@ -33,7 +33,7 @@
 	}
 }
 
-:not(.site-editor-php) svg.wc-block-editor-components-block-icon {
+svg.wc-block-editor-components-block-icon {
 	color: $studio-woocommerce-purple-50;
 }
 
