--- a/assets/js/editor-components/incompatible-payment-gateways-notice/editor.scss
+++ b/assets/js/editor-components/incompatible-payment-gateways-notice/editor.scss
@@ -1,4 +1,4 @@
-.wc-default-page-notice.is-dismissible {
+.wc-blocks-incompatible-extensions-notice.is-dismissible {
 	margin: 0;
 	padding-right: 16px;
 	.components-notice__dismiss {
@@ -10,6 +10,16 @@
 	svg {
 		width: 16px;
 		height: 16px;
+	}
+	li.wc-blocks-incompatible-extension-element {
+		display: flex;
+		align-items: center;
+
+		svg {
+			width: 24px;
+			height: 24px;
+			margin-right: 6px;
+		}
 	}
 }
 
